gtk3: Resolves: tdf#96333 fix RTL menu positioning

Change-Id: I22c5186371e558ed84da81c43400379c218ca816